--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 ##picochic 简体中文汉化版
+
+### 使用方法
+
+#####两种方法
+
+* 在后台设置界面有部分内容需要修改 PHP 源代码，导致一些内容无法汉化，如果需要完全现实的话，需要下载全部文件（压缩包）后在 WordPress 后台上传。
+* 如果不那么在乎后台设置界面，可单独下载 `languages` 文件夹中的 `zh_CN.mo` 文件并上传至 `\wp-content\themes\picochic\languages\`文件夹中。 
